workshop03/codeserver-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver-ing
  namespace: codeserverns
  labels:
    app: codeserver
    name: codeserver-ing
spec:
  ingressClassName: nginx
  rules:
  - host: codeserver-146.190.5.251.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: codeserver-svc
            port:
              number: 8443
